fix some eclipse warnings, but in a better (should be more performant) way; trim-whitespace
git-svn-id: https://svn.apache.org/repos/asf/pivot/trunk@1615963 13f79535-47bb-0310-9956-ffa450edef68